infrastructure/bootstrap/infrastructure/minio/controller/overlays/sandboxed-local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: rig-system
spec:
  ingressClassName: nginx
  rules:
  - host: minio.sandbox.rijksapp.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9000
  tls:
  - hosts:
    - minio.sandbox.rijksapp.dev
    secretName: sandbox-wildcard-tls
